@@ -1,5 +1,8 @@
 phptidy Changelog
 
+- Configurable diff command
+- Tested on MacOS X
+
 Version 2.10 (2009-11-29)
 - Bugfix: Do not touch casing of object methods named like built in functions
 - Bugfix: Indenting of opening curly braces without control structure
